syntax = "proto3";

package pingpong;

service PingPongService {
  rpc playGame(stream PingRequest) returns (stream PongResponse) {}
}

message PingRequest {
  string message = 1;
}

message PongResponse {
  string message = 1;
}
